# quire

./: .gitignore  README.md  benchmark2_results.json  benchmark_results.json
app/: pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/models/: canvas_object.dart
app/lib/models/objects/: base.dart  conversation_thread.dart  diagram.dart  image_bbox.dart  ocr_annotation.dart  stroke.dart  text.dart  thinking.dart
app/lib/screens/: calibration_screen.dart  canvas_screen.dart  home_screen.dart  settings_screen.dart
app/lib/services/: chat_service.dart  ocr_service.dart  render_service.dart  settings_service.dart
app/lib/utils/: response_parser.dart
app/linux/: CMakeLists.txt
app/macos/Runner/Configs/: AppInfo.xcconfig
app/web/: index.html
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc
my_dear_watson/: README.md
my_dear_watson/android/: build.gradle.kts
my_dear_watson/android/app/: proguard-rules.pro
my_dear_watson/lib/: main.dart
my_dear_watson/lib/screens/: canvas_screen.dart
my_dear_watson/lib/services/: debug_service.dart
my_dear_watson/lib/theme/: eink_theme.dart
my_dear_watson/linux/runner/: my_application.cc
my_dear_watson/macos/Runner.xcodeproj/: project.pbxproj
my_dear_watson/web/: manifest.json
my_dear_watson/windows/runner/: main.cpp
ocr_benchmark/: benchmark.py  benchmark2.py  benchmark3.py
server/: Cargo.toml
server/ocr/: requirements.txt  server.py
server/src/: claude.rs  log.rs  main.rs  ocr.rs  render.rs
(+3 files in other folders)
